Inclusao de nova estrutura para eventos e melhorias na tela do evento

--- a/ToGol/app/src/main/res/values/strings.xml
+++ b/ToGol/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="sport">Esporte</string>
     <string name="date">Data</string>
     <string name="go_button">Ir</string>
+    <string name="equipes">Equipes</string>
 </resources>
