Inclusao de imagens dos esportes. Inclusao de servico para ir para outras cidades. Inclusao de servico para calcular rota basica ate o evento

--- a/ToGol/app/src/main/res/values/strings.xml
+++ b/ToGol/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">ToGol</string>
     <string name="title_activity_main">ToGol</string>
-    <string name="place">Lugar</string>
+    <string name="place">Cidade</string>
     <string name="sport">Esporte</string>
     <string name="date">Data</string>
     <string name="go_button">Ir</string>
